replace with the predefined StandardCharsets.UTF_8 code